--- a/templates/back/contact.html.twig
+++ b/templates/back/contact.html.twig
@@ -1,10 +1,10 @@
-{% extends 'base.html.twig' %}
+{% extends 'front.html.twig' %}
 {# on vient charger le template #}
 {# AUCUN CODE HTML en dehors des block twig #}
 
-{% block titre %} Detail - {{ parent() }} {% endblock %}
+{% block titre %} Contact - {{ parent() }} {% endblock %}
 {# avec parent je recupere le contenu du bloque parent #}
 
-{% block central %} 
-    <h1>Detail</h1>
+{% block central%} 
+    <h1>Contact</h1>
 {% endblock %}
