--- a/templates/back/liste.html.twig
+++ b/templates/back/liste.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'front.html.twig' %}
 {# on vient charger le template #}
 {# AUCUN CODE HTML en dehors des block twig #}
 
