--- a/templates/front.html.twig
+++ b/templates/front.html.twig
@@ -19,7 +19,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container px-5">
    
-        <a class="navbar-brand" href="{{ path('home')}}" id="logo"><img src="{{ asset('img/logo.svg') }}" href="{{ path('home')}}" class="logo-noir"> <h1>BUCKET-LIST</h1></a>
+        <a class="navbar-brand" href="{{ path('home')}}" id="logo"><img src="{{ asset('img/logo.svg') }}" href="{{ path('home')}}" class="logo-noir" alt="image"> <h1>BUCKET-LIST</h1></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -34,7 +34,7 @@
 
 <section class="container px-5" id="content">
 {% block central %} Titre ICI {% endblock %}
-{% block contenu%}  {% endblock %}
+{% block contenu %}  {% endblock %}
 </section>
 
 <!-- Footer-->
