--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,29 +1,13 @@
-h1{ color: #f75200;}
-#content {
-    height: 50rem;
-    
+@import url(./menu.css);
+@import url(./main.css);
+@import url(./footer.css);
 
-   
-}
-#logo {
-display: flex;
-align-items: baseline;
-}
-
-#logo > h1 {
-    font-size: 4rem;
+html {
     margin: 0;
 }
 
-#logo {
-    padding: 0;
-}
 
-.logo-noir {
-    filter: invert(65%) sepia(96%) saturate(5997%) hue-rotate(3deg) brightness(99%) contrast(102%);
-    height: 4rem;
-}
+body *{
+    font-family: 'Hind', sans-serif;
 
-#wishes {
-    margin-top: 5rem;
 }
