--- a/templates/front.html.twig
+++ b/templates/front.html.twig
@@ -10,39 +10,38 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">   
     <link rel="stylesheet" href="{{ asset('css/style.css') }}">
 </head>
 <body>
 
 <!-- Responsive navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container px-5">
-   
-        <a class="navbar-brand" href="{{ path('home')}}" id="logo"><img src="{{ asset('img/logo.svg') }}" href="{{ path('home')}}" class="logo-noir" alt="image"> <h1>BUCKET-LIST</h1></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link {% if app.request.attributes.get('_route') == 'home' %} active {% endif %}" aria-current="page" href="{{ path('home')}}">Home</a></li>
-                <li class="nav-item"><a class="nav-link {% if app.request.attributes.get('_route') == 'list' %} active {% endif %}" href="{{ path('list')}}">Liste</a></li>
-                <li class="nav-item"><a class="nav-link {% if app.request.attributes.get('_route') == 'contact' %} active {% endif %}" href="{{ path('contact')}}">Contact </a></li>
-                <li class="nav-item"><a class="nav-link {% if app.request.attributes.get('_route') == 'about' %} active {% endif %}" href="{{ path('about')}}">About</a></li>
+
+   <header>
+       <a href="{{ path('home')}}" id="logo"><img src="{{ asset('img/logo.svg') }}" href="{{ path('home')}}" class="logo-noir" alt="image"><h1 class="titre">BUCKET-LIST</h1></a>
+
+       <nav class="content">
+            <ul class="topnav">
+                <li class="right"><a class="link {% if app.request.attributes.get('_route') == 'home' %} active {% endif %}" aria-current="page" href="{{ path('home')}}">Home</a></li>
+                <li class="right"><a class="link {% if app.request.attributes.get('_route') == 'list' %} active {% endif %}" href="{{ path('list')}}">Liste</a></li>
+                <li class="right"><a class="link {% if app.request.attributes.get('_route') == 'contact' %} active {% endif %}" href="{{ path('contact')}}">Contact </a></li>
+                <li class="right"><a class="link {% if app.request.attributes.get('_route') == 'about' %} active {% endif %}" href="{{ path('about')}}">About</a></li>
             </ul>
-        </div>
-    </div>
-</nav>
+        </nav>
+   </header>
 
-<section class="container px-5" id="content">
-{% block central %} Titre ICI {% endblock %}
-{% block contenu %}  {% endblock %}
+<main>
+    <section class="container px-5" id="content">
+    {% block central %} Titre ICI {% endblock %}
+    {% block contenu %}  {% endblock %}
 </section>
-
+</main>
 <!-- Footer-->
-<footer class="py-5 bg-dark">
-    <div class="container px-4 px-lg-5"><p class="m-0 text-center text-white">&copy; Bucket-List 2021</p></div>
+<footer >
+    <div class="copyright"><p>&copy; Bucket-List 2021</p></div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
