--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,11 +1,100 @@
 main {
 
-    margin: 0 0 20rem 20rem ;
+    margin: 0 20rem 0 20rem  ;
+
 }
 
 body {
     margin: 0;
-
+    vertical-align: middle;
 }
 
 html, body { height : 100%; }
+
+section.container {
+    display: block;
+    margin: auto;
+
+}
+
+
+a.btn {
+    text-decoration: none ;
+    color: #dfdfdf;
+    border : solid 1px #BB2D3B;
+    border-radius: 2px;
+    padding: 4px;
+
+}
+
+a.btn:hover{
+    background-color: #BB2D3B;
+}
+
+/* mise ne page liste des wishes */
+div.tab_wishes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    color: #dfdfdf;
+
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 100%;
+    border: 1px solid #212529;
+
+}
+
+th, td {
+    text-align: left;
+    padding: 16px;
+}
+
+tr:nth-child(even) {
+    background-color: #212529;
+}
+
+tr {
+    background-color: #2C3845;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
