--- a/templates/back/liste.html.twig
+++ b/templates/back/liste.html.twig
@@ -2,7 +2,7 @@
 {# on vient charger le template #}
 {# AUCUN CODE HTML en dehors des block twig #}
 
-{% block titre %} About - {{ parent() }} {% endblock %}
+{% block titre %} Liste - {{ parent() }} {% endblock %}
 {# avec parent je recupere le contenu du bloque parent #}
 
 {% block central%} 
@@ -23,15 +23,32 @@
  <table class="table table-dark table-striped" >
    <tbody>
    {% for w in wishes %}
+
      <tr>
        <td>{{ w.title }}</td> 
        <td>{{ w.description }}</td>
        <td>{{ w.author }}</td>
        <td>{{ w.getDateCreated|date("d/m/Y") }}</td>
-       <td><a href="{{ path('enlever', {id:w.id}) }}" class="btn btn-danger">enlever</a></td>
+       <td><button class="btn btn-danger" id="myBtn">enlever</button>
+           <div id="myModal" class="modal">
+
+               <!-- Modal content -->
+               <div class="modal-content">
+                   <span class="close">&times;</span>
+                   <p>Etes vous sûr de vouloir supprimer?</p>
+                   <a href="{{ path('enlever', {id:w.id}) }}" class="btn btn-danger" >enlever</a>
+               </div>
+
+           </div>
+       </td>
+        <td><a href="{{ path('modifier', {id:w.id}) }}" class="btn btn-danger">modifier</a></td>
+
      </tr>
+
      {% endfor %}
+   <script src="{{ asset('javascript/modal.js') }}"></script>
    </tbody>
  </table>
  </div>
+
 {% endblock %}
