--- a/templates/back/liste.html.twig
+++ b/templates/back/liste.html.twig
@@ -19,6 +19,7 @@
     {% endfor %}
     {% endfor %}
 
+
 <div class="tab_wishes">
  <table class="table table-dark table-striped" >
    <tbody>
@@ -26,22 +27,9 @@
 
      <tr>
        <td>{{ w.title }}</td> 
-       <td>{{ w.description }}</td>
-       <td>{{ w.author }}</td>
-       <td>{{ w.getDateCreated|date("d/m/Y") }}</td>
-       <td><button class="btn btn-danger" id="myBtn">enlever</button>
-           <div id="myModal" class="modal">
 
-               <!-- Modal content -->
-               <div class="modal-content">
-                   <span class="close">&times;</span>
-                   <p>Etes vous sûr de vouloir supprimer?</p>
-                   <a href="{{ path('enlever', {id:w.id}) }}" class="btn btn-danger" >enlever</a>
-               </div>
 
-           </div>
-       </td>
-        <td><a href="{{ path('modifier', {id:w.id}) }}" class="btn btn-danger">modifier</a></td>
+        <td><a href="{{ path('detail', {id:w.id}) }}" class="btn btn-danger">detail</a></td>
 
      </tr>
 
