--- a/templates/main/ajouter.html.twig
+++ b/templates/main/ajouter.html.twig
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block contenu %}
-    <div class="col-3">
+    <div class="form_add">
         {{ form_start(formWish) }}
 
         {{ form_widget(formWish) }}
